--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,39 @@ a {
   display: flex;
   justify-content: space-between;
 }
+main {
+  padding: 30px 0;
+}
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.weather-app-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: rgba(39, 33, 66, 0.4);
+  font-weight: 500;
+}
+.weather-app-details strong {
+  color: #f65282;
+}
+.weather-app-temperature-container {
+  display: flex;
+}
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+  margin-left: 10px;
+}
+.weather-app-temperature {
+  font-size: 88px;
+  font-weight: bold;
+}
+.weahter-app-unit {
+  margin-top: 16px;
+  font-size: 28px;
+}
 .search-form-input {
   background-color: #f9f7fe;
   border: none;
