--- a/src/style.css
+++ b/src/style.css
@@ -42,13 +42,13 @@ main {
   display: flex;
 }
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
-  margin-left: 10px;
+  width: 88px;
+  height: 88px;
 }
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
+  line-height: 88px;
 }
 .weahter-app-unit {
   margin-top: 16px;
