--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,21 @@ main {
   margin-left: 5px;
   font-size: 16px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.6;
+}
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.6;
+}
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
